--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,16 +1,34 @@
+body {
+    font-size: 16px;
+    
+}
+
+.container {
+    max-width: 120rem;
+    object-fit: contain;
+}
+
+
 .logo-container {
     margin-top: 69px;
     margin-left: 162px;
     margin-bottom: 69px;
-    display: inline-block;
+    display: flex;
+    align-items: center;
     vertical-align: middle;
 }
 
+
+.navigation-bar {
+    display: flex;
+    align-items: center;
+}
 .logo {
     width: 36px;
     height: 53px;
     display: inline-block;
     vertical-align: middle;
+    padding: 5px;
 }
 
 .logo-text {
@@ -150,12 +168,17 @@
 
 .banner {
     display: flex;
-    width: 1920px;
-    height: 898px;
+    width: 120rem;
+    width: 56.125rem;
     flex-direction: column;
     align-items: flex-start;
     gap: 23px;
-    flex-shrink: 0;
+    /* flex-shrink: 0; */
+    background-image: url('../assets/Image.png');
+    background-size: cover;        /* чтобы картинка растягивалась */
+    background-position: center;   /* чтобы была по центру */
+    background-repeat: no-repeat;
+    
 }
 
 .content {
